--- a/1.html
+++ b/1.html
@@ -127,7 +127,7 @@
          <img onclick="COPY()" src="copy.png" width="230px"/>
       </div>
       <div class="link">
-         <input type="text" id="LINK" value="LINK MANA" readonly/>
+         <input type="text" id="LINK" value="https://wrgsite.github.io/www.wrg.github.oi/1" readonly/>
       </div>
       <div class="DASAR">
          <span>DOWNLOAD NOW</span>
